Done training data testing pending

--- a/categorical-feature-encoding-02.ipynb
+++ b/categorical-feature-encoding-02.ipynb
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "92049d15",
+   "id": "8a392222",
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "209bea8b",
+   "id": "195a81eb",
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "82cdc419",
+   "id": "087abcc9",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6622d1c9",
+   "id": "d4133fc5",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "892f4cde",
+   "id": "830d40c8",
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1490c6d0",
+   "id": "23feb272",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "209e1b19",
+   "id": "53a1bb5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "026d6795",
+   "id": "3705a66c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a7281d21",
+   "id": "28797cf0",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "75a12239",
+   "id": "0d004517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "8d732153",
+   "id": "fd695830",
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "dca4e204",
+   "id": "91ac1e72",
    "metadata": {},
    "outputs": [
     {
@@ -1776,253 +1776,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "22ce94b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "encoder = ce.LeaveOneOutEncoder()\n",
-    "X = train_df.drop('target', axis=1)\n",
-    "y = train_df['target']\n",
-    "\n",
-    "categorical_features=[]\n",
-    "for i in X.columns:\n",
-    "    if 'bin' not in i:\n",
-    "        categorical_features.append(i)\n",
-    "\n",
-    "X = X[categorical_features]\n",
-    "#encoder = ce.OrdinalEncoder()\n",
-    "df = encoder.fit_transform(X, y).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "c464ba7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nom_0</th>\n",
-       "      <th>nom_1</th>\n",
-       "      <th>nom_2</th>\n",
-       "      <th>nom_3</th>\n",
-       "      <th>nom_4</th>\n",
-       "      <th>nom_5</th>\n",
-       "      <th>nom_6</th>\n",
-       "      <th>nom_7</th>\n",
-       "      <th>nom_8</th>\n",
-       "      <th>nom_9</th>\n",
-       "      <th>ord_0</th>\n",
-       "      <th>ord_1</th>\n",
-       "      <th>ord_2</th>\n",
-       "      <th>ord_3</th>\n",
-       "      <th>ord_4</th>\n",
-       "      <th>ord_5</th>\n",
-       "      <th>day</th>\n",
-       "      <th>month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.327148</td>\n",
-       "      <td>0.360990</td>\n",
-       "      <td>0.307169</td>\n",
-       "      <td>0.242820</td>\n",
-       "      <td>0.237746</td>\n",
-       "      <td>0.358272</td>\n",
-       "      <td>0.312990</td>\n",
-       "      <td>0.233333</td>\n",
-       "      <td>0.374074</td>\n",
-       "      <td>0.388889</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.403890</td>\n",
-       "      <td>0.257885</td>\n",
-       "      <td>0.307005</td>\n",
-       "      <td>0.208407</td>\n",
-       "      <td>0.401980</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.327148</td>\n",
-       "      <td>0.290057</td>\n",
-       "      <td>0.359221</td>\n",
-       "      <td>0.289957</td>\n",
-       "      <td>0.304167</td>\n",
-       "      <td>0.389381</td>\n",
-       "      <td>0.263971</td>\n",
-       "      <td>0.311189</td>\n",
-       "      <td>0.190909</td>\n",
-       "      <td>0.083333</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.403890</td>\n",
-       "      <td>0.326330</td>\n",
-       "      <td>0.206605</td>\n",
-       "      <td>0.186887</td>\n",
-       "      <td>0.303997</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.241793</td>\n",
-       "      <td>0.290057</td>\n",
-       "      <td>0.293087</td>\n",
-       "      <td>0.289957</td>\n",
-       "      <td>0.353958</td>\n",
-       "      <td>0.274673</td>\n",
-       "      <td>0.297089</td>\n",
-       "      <td>0.206751</td>\n",
-       "      <td>0.223827</td>\n",
-       "      <td>0.178571</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.317188</td>\n",
-       "      <td>0.403133</td>\n",
-       "      <td>0.307005</td>\n",
-       "      <td>0.351885</td>\n",
-       "      <td>0.206923</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.351043</td>\n",
-       "      <td>0.290047</td>\n",
-       "      <td>0.307147</td>\n",
-       "      <td>0.339780</td>\n",
-       "      <td>0.329465</td>\n",
-       "      <td>0.234086</td>\n",
-       "      <td>0.363714</td>\n",
-       "      <td>0.349206</td>\n",
-       "      <td>0.321782</td>\n",
-       "      <td>0.209302</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.403877</td>\n",
-       "      <td>0.360951</td>\n",
-       "      <td>0.330124</td>\n",
-       "      <td>0.208155</td>\n",
-       "      <td>0.355736</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.351056</td>\n",
-       "      <td>0.290057</td>\n",
-       "      <td>0.293087</td>\n",
-       "      <td>0.339800</td>\n",
-       "      <td>0.329476</td>\n",
-       "      <td>0.312593</td>\n",
-       "      <td>0.306228</td>\n",
-       "      <td>0.273563</td>\n",
-       "      <td>0.378641</td>\n",
-       "      <td>0.205882</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.403890</td>\n",
-       "      <td>0.225217</td>\n",
-       "      <td>0.206605</td>\n",
-       "      <td>0.351885</td>\n",
-       "      <td>0.404487</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      nom_0     nom_1     nom_2     nom_3     nom_4     nom_5     nom_6  \\\n",
-       "0  0.327148  0.360990  0.307169  0.242820  0.237746  0.358272  0.312990   \n",
-       "1  0.327148  0.290057  0.359221  0.289957  0.304167  0.389381  0.263971   \n",
-       "2  0.241793  0.290057  0.293087  0.289957  0.353958  0.274673  0.297089   \n",
-       "3  0.351043  0.290047  0.307147  0.339780  0.329465  0.234086  0.363714   \n",
-       "4  0.351056  0.290057  0.293087  0.339800  0.329476  0.312593  0.306228   \n",
-       "\n",
-       "      nom_7     nom_8     nom_9  ord_0     ord_1     ord_2     ord_3  \\\n",
-       "0  0.233333  0.374074  0.388889      2  0.403890  0.257885  0.307005   \n",
-       "1  0.311189  0.190909  0.083333      1  0.403890  0.326330  0.206605   \n",
-       "2  0.206751  0.223827  0.178571      1  0.317188  0.403133  0.307005   \n",
-       "3  0.349206  0.321782  0.209302      1  0.403877  0.360951  0.330124   \n",
-       "4  0.273563  0.378641  0.205882      1  0.403890  0.225217  0.206605   \n",
-       "\n",
-       "      ord_4     ord_5  day  month  \n",
-       "0  0.208407  0.401980    2      2  \n",
-       "1  0.186887  0.303997    7      8  \n",
-       "2  0.351885  0.206923    7      2  \n",
-       "3  0.208155  0.355736    2      1  \n",
-       "4  0.351885  0.404487    7      8  "
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "e00b58af",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bin_0\n",
-      "bin_1\n",
-      "bin_2\n",
-      "bin_3\n",
-      "bin_4\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in train_df.columns:\n",
-    "    if 'bin' in i:\n",
-    "        print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "feeb9bdb",
+   "id": "83c42d80",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "357b42e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df = handle_categorial_features(train_df, ce.LeaveOneOutEncoder())"
+   ]
   }
  ],
  "metadata": {
